--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ ipykernel = "^6.29.3"
 pandas = "^2.2.1"
 pyspark = "^3.5.1"
 setuptools = "^69.1.1"
+textblob = "^0.18.0.post0"
+transformers = "^4.38.2"
+torch = "^2.2.1"
 
 
 [build-system]
