--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ setuptools = "^69.1.1"
 textblob = "^0.18.0.post0"
 transformers = "^4.38.2"
 torch = "^2.2.1"
+matplotlib = "^3.8.3"
+seaborn = "^0.13.0"
 
 
 [build-system]
