--- a/config.yaml
+++ b/config.yaml
@@ -1,46 +1,28 @@
 
 collect: 
-  train: "path/to/train.csv"
-  test: "path/to/test.csv"
-  validation: "path/to/validate.csv"
-
-
+  module: "DataLoader"
+  config: 
+    data_dir: "data/train/"
+  
 preprocess:
-  # integrate:
-
-  # clean:
-
-      # missing_values: "drop"
-    # encoding: "one_hot"
-    # scaling: "standard"
- 
-
-  # transform:
-
   add_features:
     - module: TextLanguageFeature
       config:
         input_column_name: "text_column"
         output_column_name: "language"
 
-  # reduce:
-
-
-  # split:
-  #   train_size: 0.7
-  #   test_size: 0.2
-  #   validate_size: 0.1
-  #   random_state: 42
-
-
 train:
-
   model:
-    type: "random_forest"
-    hyperparameters:
-      n_estimators: 100
-      max_depth: 10
-      random_state: 42
+    module: "TrainPipeline"
+    config:
+      # the portion to be used for trainining (and validation). The rest for testing
+      train_split: 0.7
+      features:
+        - "review_body_length"
+        - "review_header_length"
+      target: "label"
+      save_dir: "model"
+      overwrite: True
 
 
   save:
