--- a/config.yaml
+++ b/config.yaml
@@ -1,43 +1,65 @@
 
-collect: 
-  module: "DataLoader"
-  config: 
-    data_dir: "data/train/"
-  
-preprocess:
-  clean:
-    - module: "DropNull"
-      config:
-        columns: ["review_body", "review_headline", "label"]
+train: 
+  collect: 
+    module: "DataLoader"
+    config: 
+      data_dir: "data/train/"
+      merge: True
+    
+  preprocess:
+    # The headers here don't matter; they're just for clarity.
+    # Just make sure to always end with a module and a config.
+    clean:
+      - module: "DropNull"
+        config:
+          columns: ["review_body", "review_headline", "label"]
 
-  add_features:
-    - module: TextLengthFeature
-      config:
-        input_column_name: "review_body"
-        output_column_name: "review_body_length"
-    - module: TextLengthFeature
-      config:
-        input_column_name: "review_headline"
-        output_column_name: "review_headline_length"
+    add_features:
+      - module: TextLengthFeature
+        config:
+          input_column_name: "review_body"
+          output_column_name: "review_body_length"
+      - module: TextLengthFeature
+        config:
+          input_column_name: "review_headline"
+          output_column_name: "review_headline_length"
 
-train:
-    module: "TrainPipeline"
-    config:
-      # the portion to be used for trainining (and validation). The rest for testing
-      train_split: 0.7
-      features:
-        - "review_body_length"
-        - "review_headline_length"
-      target: "label"
-      save_dir: "model"
-      overwrite: True
+  train:
+      module: "TrainPipeline"
+      config:
+        # the portion to be used for trainining (and validation). The rest for testing
+        train_split: 0.7
+        features:
+          - "review_body_length"
+          - "review_headline_length"
+        target: "label"
+        save_dir: "model"
+        overwrite: True
 
 predict:
-  data_dir:
-    - "data/predict/"
-  predictions_dir:
-    - "predictions/"
-  overwrite: True
+  collect: 
+    module: "DataLoader"
+    config: 
+      data_dir: "data/predict/"
+      # we want to keep two dataframes for predictions
+      merge: False
+
+  clean:
+    # for the predictions, we might want to use different cleaning steps.
+    # e.g. we do not want to drop rows, but instead impute them.
+    - module: "DropNull"
+      config:
+        columns: []
+
+  # if left empty, the same preprocessing steps as for the training data will be used
+  preprocess:
+    
+  predict:
+    module: "PredictPipeline"
+    config:
+      save_dir:
+        - "predictions/"
+      overwrite: True
 
 
 
