--- a/predict_config.yaml
+++ b/predict_config.yaml
@@ -7,12 +7,43 @@ collect:
 
 preprocess:
   clean:
-  - module: "DropNull"
-    config:
-      columns: []
+    # - module: "DropNull"
+    #   config:
+    #     columns: ["review_body", "review_headline", "label"]
+
+    # - module: DropNotIn
+    #   config:
+    #     input_column_name: "label"
+    #     output_column_name: "label"
+    #     targets: ["True", "False"]
+
+    - module: ConvertToBoolean
+      config:
+        input_column_name: "verified_purchase"
+        output_column_name: "verified_purchase"
+        mapping: {"Y": True, "N": False}
+        non_matches: False
+
+    - module: ConvertToBoolean
+      config:
+        input_column_name: "vine"
+        output_column_name: "vine"
+        mapping: {"Y": True, "N": False}
+        non_matches: False
+
+
+  add_features:
+    - module: TextLengthFeature
+      config:
+        input_column_name: "review_body"
+        output_column_name: "review_body_length"
+    - module: TextLengthFeature
+      config:
+        input_column_name: "review_headline"
+        output_column_name: "review_headline_length"
 
 load_model:
-  - model_path: "model"
+  model_path: "model"
 
 predict:
   save_dir: "predictions/"
