--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ torch = "^2.2.1"
 matplotlib = "^3.8.3"
 seaborn = "^0.13.0"
 langdetect = "^1.0.9"
+great-expectations = "^0.18.11"
 
 
 [build-system]
