can create GXModule in pipeline/

--- a/gx/great_expectations.yml
+++ b/gx/great_expectations.yml
@@ -100,7 +100,7 @@ fluent_datasources:
   my_spark_datasource:
     type: spark
     assets:
-      my_df_dataset:
+      meh:
         type: dataframe
         batch_metadata: {}
   tst:
