add raw data quality check.

--- a/train_config.yaml
+++ b/train_config.yaml
@@ -5,6 +5,14 @@ collect:
     merge: True
     # n: 1000 # you can take subset of the data to debug more quickly.
 
+
+raw_data_quality_check:
+  module: "GXDataQualityCheckModule"
+  config:
+    expectation_suite_name: "raw_data_expectation_suite"
+    continue_after_failure: True
+
+
 preprocess:
   clean:
     - module: "DropNull"
@@ -51,7 +59,7 @@ preprocess:
 pre_training_data_quality_check:
   module: "GXDataQualityCheckModule"
   config:
-    expectation_suite_name: "my_expectation_suite"
+    expectation_suite_name: "preprocessed_data_expectation_suite"
     continue_after_failure: False
 
 train:
