--- a/gx/checkpoints/checkpoint.yml
+++ b/gx/checkpoints/checkpoint.yml
@@ -24,7 +24,7 @@ validations:
       data_asset_name: meh
       options: {}
       batch_slice:
-    expectation_suite_name: my_expectation_suite
+    expectation_suite_name: preprocessed_data_expectation_suite
 profilers: []
 ge_cloud_id:
 expectation_suite_ge_cloud_id:
