--- a/train_config.yaml
+++ b/train_config.yaml
@@ -9,7 +9,7 @@ raw_data_quality_check:
   module: "GXDataQualityCheckModule"
   config:
     expectation_suite_name: "raw_data_expectation_suite"
-    continue_after_failure: False
+    continue_after_failure: True
 
 preprocess:
   clean:
