--- a/train_config.yaml
+++ b/train_config.yaml
@@ -82,6 +82,8 @@ train:
     # the portion to be used for trainining (and validation). The rest for testing
     train_split: 0.7
     features:
+      - "marketplace_id"
+      - "product_category_id"
       - "review_body_length"
       - "review_headline_length"
       - "verified_purchase"
