--- a/train_config.yaml
+++ b/train_config.yaml
@@ -51,6 +51,12 @@ preprocess:
         output_column_name: "vine"
         mapping: {"Y": True, "N": False}
 
+  tansform:
+    - module: "OneHotEncodingModule"
+      config:
+        input_column_name: "marketplace_id"
+        output_column_name: "marketplace_id_encoded"
+
   add_features:
     - module: TextLengthFeature
       config:
@@ -60,6 +66,8 @@ preprocess:
       config:
         input_column_name: "review_headline"
         output_column_name: "review_headline_length"
+
+    
     # - module: TextSentimentFeature #FIXME: this crashes my laptop atm..
     #   config:
     #     input_column_name: "review_body"
@@ -82,7 +90,7 @@ train:
     # the portion to be used for trainining (and validation). The rest for testing
     train_split: 0.7
     features:
-      - "marketplace_id" 
+      - "marketplace_id_encoded" 
       - "product_category_id"
       - "review_body_length"
       - "review_headline_length"
