fix one hot encoding diff between inference and training by using hashing function with predifined number of features instead.

--- a/predict_config.yaml
+++ b/predict_config.yaml
@@ -60,11 +60,13 @@ preprocess:
     - module: ImputationModule
       config:
         column_name: "product_category_id"
-        imputation_method: "random"
+        imputation_method: "constant"
+        imputation_value: 1
     - module: ImputationModule
       config:
         column_name: "marketplace_id"
-        imputation_method: "random"
+        imputation_method: "constant"
+        imputation_value: 1
 
   transform:
     - module: "OneHotEncodingModule"
@@ -72,10 +74,15 @@ preprocess:
         input_column_name: "marketplace_id"
         output_column_name: "marketplace_id_encoded"
 
-    - module: "OneHotEncodingModule"
+    # - module: "OneHotEncodingModule"
+    #   config:
+    #     input_column_name: "product_category_id"
+    #     output_column_name: "product_category_id_encoded"
+    - module: HashingModule
       config:
         input_column_name: "product_category_id"
         output_column_name: "product_category_id_encoded"
+        num_features: 29
 
 load_model:
   model_path: "model"
